force-app/main/default/objects/Contact/fields/Interest_Areas__c.field-meta.xml
<CustomField>
    <fullName>Interest_Areas__c</fullName>
    <label>Interest Areas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Art</fullName>
            </value>
            <value>
                <fullName>Biology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>