force-app/main/default/objects/Contact/fields/Job_Function__c.field-meta.xml
<CustomField>
    <fullName>Job_Function__c</fullName>
    <label>Job Function</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Librarian</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>