force-app/main/default/objects/Contact/fields/Preferred_Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Contact_Method__c</fullName>
    <label>Preferred Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Preference</fullName>
                <default>true</default>
                <label>No Preference</label>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>