force-app/main/default/objects/Contact/fields/Role_Type__c.field-meta.xml
<CustomField>
    <fullName>Role_Type__c</fullName>
    <label>Role Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Sales Contact</fullName>
            </value>
            <value>
                <fullName>Other Sales Contact</fullName>
            </value>
            <value>
                <fullName>Billing Contact</fullName>
            </value>
            <value>
                <fullName>Licensing Contact</fullName>
            </value>
            <value>
                <fullName>Technical Contact</fullName>
            </value>
            <value>
                <fullName>Training Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>